// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HSPDetailPanel should change to wrapped and render when wrapped view is clicked 1`] = `
<div>
  <div
    class="hsp-detail-panel__header"
  >
    <h4>
      U6MKN0 · rec full Name · scientific name
    </h4>
    <button
      type="button"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 352 512"
        width="16"
      >
        <path
          d="M243 256l100-100c12-12 12-32 0-45l-22-22a31 31 0 00-45 0L176 189 76 89a31 31 0 00-45 0L9 111a31 31 0 000 45l100 100L9 356a31 31 0 000 45l22 22c13 12 33 12 45 0l100-100 100 100c12 12 32 12 45 0l22-22c12-13 12-33 0-45L243 256z"
        />
      </svg>
    </button>
  </div>
  <div
    class="hsp-detail-panel__body"
  >
    <div
      class="button-group"
    >
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Highlight properties
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="dropdown-menu__content"
          >
            <ul>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Similarity
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Negative
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Positive
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Aliphatic
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Aromatic
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Charged
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Polar
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Serine Threonine
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Buried Index
                </button>
              </li>
              <li>
                <button
                  class="button primary"
                  type="button"
                >
                  Clustal
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Clustal 2
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Cinema
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Helix Propensity
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Hydro
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Lesk
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Mae
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Nucleotide
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Purine Pyrimidine
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Strand Propensity
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Taylor
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Turn Propensity
                </button>
              </li>
              <li>
                <button
                  class="button tertiary"
                  type="button"
                >
                  Zappo
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Show annotation
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="dropdown-menu__content"
          >
            <ul>
              <li>
                <button
                  class="button annotation-choice primary"
                  type="button"
                >
                  chain
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <fieldset
        class="msa-view-choice"
      >
        View:
        <label>
          <input
            checked=""
            name="view"
            type="radio"
          />
          Overview
        </label>
        <label>
          <input
            name="view"
            type="radio"
          />
          Wrapped
        </label>
      </fieldset>
    </div>
    <div>
      <div>
        <section
          class="alignment-grid"
          data-testid="alignment-wrapped-view"
        >
          <section
            class="alignment-grid__row alignment-grid__row--msa-track"
          >
            <div
              class="track-label track-label--align-labels"
            >
              <span
                class="align-label"
              >
                Query
              </span>
              <span
                class="align-label"
                style="height: 20px;"
              >
                Match
                <a
                  href="/uniprotkb/U6MKN0"
                >
                  U6MKN0
                </a>
                <button
                  class="button tertiary"
                  type="button"
                />
              </span>
            </div>
            <div
              class="track"
            >
              <protvista-msa
                colorscheme="clustal"
                height="40"
                length="45"
              />
            </div>
            <span
              class="right-coord"
            >
              <div
                style="height: 20px; margin-top: 0px;"
              >
                47
              </div>
              <div
                style="height: 20px;"
              >
                462
              </div>
            </span>
          </section>
          <section
            class="alignment-grid__row"
          >
            <span
              class="track-label"
            >
              chain
            </span>
            <div
              class="track"
            >
              <protvista-track
                displayend="462"
                displaystart="418"
                length="45"
              />
            </div>
          </section>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`HSPDetailPanel should initially render overview 1`] = `
<DocumentFragment>
  <div
    class="sliding-panel sliding-panel--bottom hsp-detail-panel"
    style="opacity: 0; margin-right: -1000px;"
  >
    <div>
      <div
        class="hsp-detail-panel__header"
      >
        <h4>
          U6MKN0 · rec full Name · scientific name
        </h4>
        <button
          type="button"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 352 512"
            width="16"
          >
            <path
              d="M243 256l100-100c12-12 12-32 0-45l-22-22a31 31 0 00-45 0L176 189 76 89a31 31 0 00-45 0L9 111a31 31 0 000 45l100 100L9 356a31 31 0 000 45l22 22c13 12 33 12 45 0l100-100 100 100c12 12 32 12 45 0l22-22c12-13 12-33 0-45L243 256z"
            />
          </svg>
        </button>
      </div>
      <div
        class="hsp-detail-panel__body"
      >
        <div
          class="button-group"
        >
          <div
            class="dropdown-container"
          >
            <button
              class="button dropdown tertiary"
              type="button"
            >
              Highlight properties
            </button>
            <div
              class="dropdown-menu"
            >
              <div
                class="dropdown-menu__content"
              >
                <ul>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Similarity
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Negative
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Positive
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Aliphatic
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Aromatic
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Charged
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Polar
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Serine Threonine
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Buried Index
                    </button>
                  </li>
                  <li>
                    <button
                      class="button primary"
                      type="button"
                    >
                      Clustal
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Clustal 2
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Cinema
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Helix Propensity
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Hydro
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Lesk
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Mae
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Nucleotide
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Purine Pyrimidine
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Strand Propensity
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Taylor
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Turn Propensity
                    </button>
                  </li>
                  <li>
                    <button
                      class="button tertiary"
                      type="button"
                    >
                      Zappo
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="dropdown-container"
          >
            <button
              class="button dropdown tertiary"
              type="button"
            >
              Show annotation
            </button>
            <div
              class="dropdown-menu"
            >
              <div
                class="dropdown-menu__content"
              >
                <ul>
                  <li>
                    <button
                      class="button annotation-choice primary"
                      type="button"
                    >
                      chain
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <fieldset
            class="msa-view-choice"
          >
            View:
            <label>
              <input
                checked=""
                name="view"
                type="radio"
              />
              Overview
            </label>
            <label>
              <input
                name="view"
                type="radio"
              />
              Wrapped
            </label>
          </fieldset>
        </div>
        <div>
          <section
            class="alignment-grid"
            data-testid="alignment-view"
          >
            <section
              class="alignment-grid__row"
            >
              <span
                class="track-label"
              >
                Overview
              </span>
              <div
                class="track"
              >
                <div>
                  <protvista-track
                    height="15"
                    highlight="418:446"
                    layout="non-overlapping"
                    length="486"
                  />
                  <protvista-track
                    height="15"
                    highlight="418:446"
                    layout="non-overlapping"
                    length="486"
                  />
                </div>
              </div>
            </section>
            <section
              class="alignment-grid__row"
            >
              <span
                class="track-label"
              >
                chain
              </span>
              <div
                class="track"
              >
                <protvista-track
                  highlight="418:446"
                  layout="non-overlapping"
                  length="486"
                />
              </div>
            </section>
            <section
              class="alignment-grid__row alignment-grid__row--msa-track"
            >
              <div
                class="track-label track-label--align-labels"
              >
                <span
                  class="align-label"
                >
                  Query
                </span>
                <span
                  class="align-label"
                  style="height: 20px;"
                >
                  Match
                  <a
                    href="/uniprotkb/U6MKN0"
                  >
                    U6MKN0
                  </a>
                  <button
                    class="button tertiary"
                    type="button"
                  />
                </span>
              </div>
              <div
                class="track"
              >
                <protvista-manager
                  attributes="displaystart displayend"
                  displayend="28"
                  displaystart="1"
                >
                  <protvista-navigation
                    length="28"
                  />
                  <protvista-msa
                    colorscheme="clustal"
                    height="40"
                    length="28"
                  />
                </protvista-manager>
              </div>
              <span
                class="right-coord"
              >
                <div
                  style="height: 20px; margin-top: 0px;"
                >
                  28
                </div>
                <div
                  style="height: 20px;"
                >
                  28
                </div>
              </span>
            </section>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
